manifests/open-family-finance/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-family-finance
  labels:
    app: open-family-finance
spec:
  hostnames:
    - geldzaken.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: open-family-finance
          port: 80
